--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
             filter: grayscale(100%);
             transition: filter 1.5s cubic-bezier(0.4, 0.0, 0.2, 1), transform 1.5s cubic-bezier(0.4, 0.0, 0.2, 1);
         }
-        /* Switch to color when image enters viewport */
-        img.grayscale-img.in-view {
-            filter: grayscale(0%);
-        }
+        /* Hover-only color change; removed scroll-triggered 'in-view' state */
     </style>
 </head>
 <body class="overflow-x-hidden">
@@ -189,34 +186,7 @@
             });
         });
 
-        // IntersectionObserver to switch images from grayscale to color when visible
-        (function initImageObserver() {
-            const images = document.querySelectorAll('img.grayscale-img');
-            const setup = () => {
-                if ('IntersectionObserver' in window) {
-                    const io = new IntersectionObserver((entries) => {
-                        entries.forEach(entry => {
-                            if (entry.isIntersecting) {
-                                entry.target.classList.add('in-view');
-                            } else {
-                                entry.target.classList.remove('in-view');
-                            }
-                        });
-                    }, { root: null, rootMargin: '0px 0px -10% 0px', threshold: 0.1 });
-
-                    images.forEach(img => io.observe(img));
-                } else {
-                    // Fallback: make images color when JS runs
-                    images.forEach(img => img.classList.add('in-view'));
-                }
-            };
-
-            if (document.readyState === 'loading') {
-                document.addEventListener('DOMContentLoaded', setup);
-            } else {
-                setup();
-            }
-        })();
+        // Hover-only behavior: removed IntersectionObserver that toggled image color on scroll
     </script>
 </body>
 </html>
