--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
         
         img.grayscale-img {
-            filter: grayscale(100%);
+            filter: grayscale(100%) !important;
             transition: filter 1.5s cubic-bezier(0.4, 0.0, 0.2, 1), transform 1.5s cubic-bezier(0.4, 0.0, 0.2, 1);
         }
         /* Hover-only color change; removed scroll-triggered 'in-view' state */
